--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   firebase_core: ^2.27.2
   firebase_auth: ^4.18.0
   flutter_svg: ^2.0.10+1
+  google_sign_in: ^6.2.1
+  flutter_secure_storage: ^9.0.0
+  otp_text_field: ^1.1.3
 
 dev_dependencies:
   flutter_test:
