--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   google_sign_in: ^6.2.1
   flutter_secure_storage: ^9.0.0
   otp_text_field: ^1.1.3
+  cloud_firestore: ^4.16.1
+  image_picker: ^1.1.0
+ 
 
 dev_dependencies:
   flutter_test:
